# ieee3394-exemplar-agent

./: .env.example  .gitignore  ACD_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  AUTHENTICATION.md  BRANCH_READY.md  CHANGELOG.md  CHANNEL_COMMAND_ROUTING.md  CLAUDE.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MERGE_GUIDE.md  PLUGINS.md  QUICKSTART.md  README.md  REFACTOR_STATUS.md  STORAGE.md  TESTING_GUIDE.md  TEST_RESULTS.md  XAPI.md  agent.yaml  demo_agent.py  pyproject.toml  serve_webchat.py  test_capability_system.py  test_capability_system.sh  test_claude_api.py  test_cli_client.py  test_p3394_agent.py  test_sdk_integration.py  test_skill_loader.py  test_xapi_integration.py  web_chat.html
.claude/: agents  capabilities  commands  hooks  settings.json  skills
.claude/skills/: README.md
.github/workflows/: ci.yml
bridge/whatsapp-daemon/: package.json
config/: schema.py
docs/: CAPABILITY_CATALOG.md  CHANNEL_BINDING.md  MCP_CHANNEL.md  QUICKSTART.md  README.md  SDK_DEVELOPER_GUIDE.md  SDK_USAGE.md  architecture.md  development.md
docs/api/: ANTHROPIC_API.md  ANTHROPIC_API_IMPLEMENTATION.md
docs/architecture/: CONTENT_NEGOTIATION.md  DAEMON.md  MCP_CHANNEL.md  P3394-LONG-TERM-MEMORY-SPEC.md
docs/development/: DOCUMENTATION_INDEX.md
docs/guides/: INSTALLATION.md  QUICKSTART.md  SDK_DEVELOPER_GUIDE.md
docs/legacy/: DOCUMENTATION_INDEX.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  P3394-Capability-Mapping-to-skills.md  SDK_INTEGRATION.md  SESSION_WORK_SUMMARY.md
docs/reference/: CAPABILITY_ACL.md  CAPABILITY_CATALOG.md
examples/: xapi_mcp_integration.md  xapi_replay_session.py
examples/demo-agent/: README.md  demo_agent.py
examples/simple-chatbot/: README.md
examples/web-chat/: README.md  web_chat.html
scripts/: bind_channel.py  create_whatsapp_service_principal.py  setup_supabase_tokens.py  start-daemon.sh  status-daemon.sh
scripts/daemon/: restart-daemon.sh  stop-daemon.sh
scripts/setup/: create_whatsapp_service_principal.py
scripts/testing/: test_installed_skills.sh
tests/: test_admin_access_control.py  test_anthropic_api.py  test_channels.py  test_command_discovery.py  test_daemon_client_xapi.py  test_kstar_tools.py  test_p3394_agent.py  test_sdk.py  test_sdk_hooks.py  test_sdk_tools.py  test_session_directories.py  test_skills.py  test_whatsapp_channel.py
whatsapp_bridge/: README.md  package.json  server.js
(+182 files in other folders)
