[project]
name = "ieee3394-agent"
version = "0.1.0"
description = "IEEE P3394 Exemplar Agent - Reference implementation of the Agent Interface Standard"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IEEE 3394 Working Group"}
]
keywords = ["agent", "ai", "ieee", "p3394", "llm"]

dependencies = [
    "anthropic>=0.39.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
ieee3394-agent = "ieee3394_agent.__main__:run"
ieee3394-cli = "ieee3394_agent.cli_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
